<resources>
    <string name="app_name">Proton</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="title_login">Masuk Sekarang</string>
    <string name="message_login_page">Aplikasi distribusi UMKM Indonesia</string>
    <string name="desc_register">Belum punya akun?</string>
    <string name="buttonToRegister">Daftar</string>

    <string name="name">Nama</string>
    <string name="phone_number">Nomor Hp</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="button_next">Selanjutnya</string>
    <string name="message_register">Lengkapi data dibawah ya!</string>
    <string name="name_business">Nama Usaha</string>
    <string name="type_business">Jenis Usaha</string>
    <string name="category_business">Kategori</string>
    <string name="address_business">Alamat</string>
    <string name="register_button">Daftar Sekarang</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="message_line1">Kembangkan Usahamu</string>
    <string name="product">Produk</string>
    <string name="store">Toko</string>
    <string name="desc_product">Kelola produk di toko dengan tepat dalam jumlah dan harga yang sesuai.</string>
    <string name="desc_store">Temukan toko yang cocok untuk mendistribusikan produkmu dan tingkatkan bisnis mulai sekarang.</string>


    <string name="empty_management">Belum ada %s</string>
    <string name="message_empty">Masukkan %s dahulu ya</string>
    <string name="button_empty">Tambah %s</string>

    <string name="cari">Cari ..</string>

    <string name="product_name">Nama Produk</string>
    <string name="product_category">Kategori Produk</string>
    <string name="stock">Jumlah stok : 0</string>
    <string name="type_product">Tipe</string>

    <string name="store_name">Nama Toko</string>
    <string name="store_address">Alamat</string>
    <string name="store_number">Nomor Hp</string>

    <string name="date">Tanggal</string>
    <string name="message_profit">Total Keuntungan Produk</string>
    <string name="message_profit_inStore">Total Keuntungan</string>
    <string name="profit">Total Profit</string>

    <string name="code">Kode</string>
    <string name="category">Kategori</string>
    <string name="stock_product">Stok</string>
    <string name="type">Tipe</string>
    <string name="exp_date">Tanggal Expired</string>
    <string name="price">Harga</string>
    <string name="selling_price">Harga Jual</string>
    <string name="sold">Terjual</string>
    <string name="margin">Keuntungan</string>

    <string name="value_stock">%s pcs</string>

    <string name="list_store">List Toko</string>
    <string name="list_product">List Produk</string>

    <string name="add_product_dropdown">Tambah produk yang belum ada </string>
    <string name="klik_ini">klik ini</string>

    <string name="add_product">Tambah Produk</string>
    <string name="add_store">Tambah Toko</string>

    <string name="detail_store">Detail Toko</string>


</resources>