<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.management.ManagementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/emptyImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/empty_product" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_management"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_empty"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_empty"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawableStart="@drawable/baseline_add_24"
            android:drawablePadding="12dp"
            android:layout_marginTop="16dp" /> <!-- Ganti button_background dengan background yang Anda inginkan, dan ic_plus dengan ikon plus yang Anda inginkan -->

    </LinearLayout>

</FrameLayout>




