<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.managementDetailProduct.ManagementDetailProductActivity">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stadium_background"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="@string/date"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/message_profit"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/totalProfit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/profit"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/line"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TableRow>

                    <TextView
                        android:id="@+id/labelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelStock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stock_product"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueStock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stock_product"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueCatergory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelExpDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exp_date"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueExpDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exp_date"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valuePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/labelSellingPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selling_price"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/valueSellingPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selling_price"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>
                </TableRow>
            </TableLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/line"
                app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/view2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_store"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="16dp">

                <include
                    layout="@layout/item_edit_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:layout_editor_absoluteX="16dp">

                <include
                    layout="@layout/item_edit_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>



    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/view_card"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />-->