<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/photoStore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="TODO" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/storeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/storeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/store_address"
                android:textColor="#757575"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/storeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/store_number"
                android:textColor="#757575"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>